# python-sdk

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pydoc-markdown.yml  pyproject.toml
.github/workflows/: release.yml
.woodpecker/: check.yml
docs/: reference.md
src/wrenn/: __init__.py  _config.py  async_capsule.py  capsule.py  client.py  commands.py  exceptions.py  files.py  pty.py  sandbox.py
src/wrenn/_git/: __init__.py  _auth.py  _cmd.py  exceptions.py
src/wrenn/code_interpreter/: __init__.py  async_capsule.py  capsule.py  models.py
src/wrenn/models/: __init__.py  _generated.py
tests/: conftest.py  test_capsule_features.py  test_client.py  test_filesystem_pty.py  test_git.py  test_integration.py  test_sandbox_features.py
tests/integration/: conftest.py  test_async.py  test_auth_apikeys.py  test_capsule_lifecycle.py  test_commands.py  test_files.py  test_filesystem.py  test_git.py  test_lifecycle.py  test_pty.py  test_run_code.py  test_streaming.py
