[project]
name = "wrenn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tasnim Kabir Sadik", email = "tksadik92@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "httpx>=0.28.1",
    "httpx-ws>=0.9.0",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.56.0",
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
markers = [
    "integration: integration tests (require live server)",
]
